# datacite-websnap

./: .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
src/datacite_websnap/: __init__.py  cli.py  config.py  constants.py  datacite_handler.py  exporter.py  logger.py  validators.py  writer.py
tests/: __init__.py  test_datacite_handler.py  test_validators.py
