[project]
name = "datacite-websnap"
version = "0.1.0"
description = "CLI tool that bulk exports DataCite metadata records from a repository to an S3 bucket."
authors = [
    {name = "Rebecca Buchholz"},
]
maintainers = [
    {name = "EnviDat", email="envidat@wsl.ch"}
]
dependencies = ["click>=8.1.8", "requests>=2.32.3", "lxml>=5.3.2"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
datacite-websnap = "datacite_websnap.cli:cli"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "ruff>=0.11.3",
]
