[project]
name = "datacite-websnap"
version = "0.1.0"
description = "CLI tool that bulk exports DataCite metadata records from a repository to an S3 bucket."
authors = [
    {name = "Rebecca Buchholz"},
]
maintainers = [
    {name = "EnviDat", email="envidat@wsl.ch"}
]
dependencies = ["click>=8.1.8", "requests>=2.32.3", "pydantic>=2.11.3", "python-dotenv>=1.1.0", "boto3>=1.37.32"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
datacite-websnap = "datacite_websnap.cli:cli"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "ruff>=0.11.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
